# GandonList

./: LICENSE  README.md  main.py  pyproject.toml  start.bat
cogs/Gandon/: ban.py  dependency.py  stats.py
core/: config.py
core/models/: __init__.py  admin_notes.py  db_helper.py  player.py  server_ban.py
