[project]
name = "gandonlistbot"
version = "0.1.0"
description = "Py-Cord bot for optimizing the work of Space Station 14 administrators"
authors = [
    {name = "ESphagnum",email = "sfagnum14@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "py-cord (>=2.6.1,<3.0.0)",
    "uuid (>=1.30,<2.0)",
    "datetime (>=5.5,<6.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
